0.1v: full worked swagger and added docker
